[package]
name = "monad-wireauth"
version = "0.1.0"
edition = "2021"

[dependencies]
monad-executor.workspace = true
hex.workspace = true
lru.workspace = true
blake3.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
insta = { workspace = true, features = ["yaml"] }
serde = { workspace = true, features = ["derive"] }
tikv-jemallocator.workspace = true

[[bench]]
name = "manager_bench"
harness = false

[[example]]
name = "demo"
